adjusting resposivity, adjusting favicon

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -20,5 +20,7 @@
   "sent": "Sent!",
   "message_sent": "Your message has been successfully sent to my e-mail.",
   "close": "Close",
-  "send": "Send"
+  "send": "Send",
+  "preview": "Preview",
+  "repo": "Repository"
 }
