Some descriptions adjustments

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -22,5 +22,6 @@
   "close": "Close",
   "send": "Send",
   "preview": "Preview",
-  "code": "Code"
+  "code": "Code",
+  "portfolio_image": "Vitor Comin portfolio"
 }
