--- a/src/i18n/pt-br.json
+++ b/src/i18n/pt-br.json
@@ -22,5 +22,6 @@
   "close": "Fechar",
   "send": "Enviar",
   "preview": "Prévia",
-  "code": "Código"
+  "code": "Código",
+  "portfolio_image": "Portfólio de Vitor Comin"
 }
