Adjusting description to help SEO

--- a/src/i18n/pt-br.json
+++ b/src/i18n/pt-br.json
@@ -8,7 +8,7 @@
   "developer": "Desenvolvedor Full-Stack",
   "about_me": "Sobre mim",
   "little_about_me": "Um pouco sobre mim:",
-  "about_me_text": "Vitor, 22 anos, é apaixonado por tecnologia e encontra nela um universo de possibilidades que o inspira a sonhar e crescer. Com dedicação e motivação, busca se desenvolver continuamente, encarando cada desafio como uma oportunidade para avançar ainda mais. Seu amor pelo que faz e o desejo constante de evolução são as forças que impulsionam sua entrega e sua dedicação todos os dias.",
+  "about_me_text": "Vitor Comin, 22 anos, é apaixonado por tecnologia e encontra nela um universo de possibilidades que o inspira a sonhar e crescer. Com dedicação e motivação, busca se desenvolver continuamente, encarando cada desafio como uma oportunidade para avançar ainda mais. Seu amor pelo que faz e o desejo constante de evolução são as forças que impulsionam sua entrega e sua dedicação todos os dias.",
   "education": "Bacharel em Sistemas de Informação, UNIVILLE (8º semestre de 9).",
   "work": "Atua como Desenvolvedor Full-Stack há mais de 1 ano na",
   "location": "Joinville, Santa Catarina. Brasil.",
