--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,7 +8,7 @@
   "developer": "Full-Stack Developer",
   "about_me": "About me",
   "little_about_me": "A little about me:",
-  "about_me_text": "Vitor, 22 years old, is passionate about technology and finds in it a universe of possibilities that inspires him to dream and grow. With dedication and motivation, he strives to continuously develop himself, viewing each challenge as an opportunity to move forward even more. His love for what he does and his constant desire for growth are the driving forces behind his commitment and dedication every day.",
+  "about_me_text": "Vitor Comin, 22 years old, is passionate about technology and finds in it a universe of possibilities that inspires him to dream and grow. With dedication and motivation, he strives to continuously develop himself, viewing each challenge as an opportunity to move forward even more. His love for what he does and his constant desire for growth are the driving forces behind his commitment and dedication every day.",
   "education": "Bachelor's degree in Information Systems, UNIVILLE (8th semester out of 9).",
   "work": "Works as a Full-Stack Developer for over 1 year at",
   "location": "Joinville, Santa Catarina. Brazil.",
