Developing tests to components

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,7 +4,7 @@
   "projects": "Projects",
   "contact": "Contact",
   "hello": "Hello there!",
-  "name": "My name is Vitor Comin",
+  "my_name": "My name is Vitor Comin",
   "developer": "Full-Stack Developer",
   "about_me": "About me",
   "little_about_me": "A little about me:",
@@ -14,9 +14,9 @@
   "location": "Joinville, Santa Catarina. Brazil.",
   "my_skills": "My skills:",
   "working_on_projects": "Working on projects...",
-  "full_name": "Full name",
+  "name": "Name",
   "mail_address": "E-mail address",
-  "message": "Message",
+  "message": "Feel free to send me a message 🙂",
   "sent": "Sent!",
   "message_sent": "Your message has been successfully sent to my e-mail.",
   "close": "Close",
