--- a/src/i18n/pt-br.json
+++ b/src/i18n/pt-br.json
@@ -4,7 +4,7 @@
   "projects": "Projetos",
   "contact": "Contato",
   "hello": "Olá visitante!",
-  "name": "Meu nome é Vitor Comin",
+  "my_name": "Meu nome é Vitor Comin",
   "developer": "Desenvolvedor Full-Stack",
   "about_me": "Sobre mim",
   "little_about_me": "Um pouco sobre mim:",
@@ -14,9 +14,9 @@
   "location": "Joinville, Santa Catarina. Brasil.",
   "my_skills": "Minhas habilidades",
   "working_on_projects": "Projetos em construção...",
-  "full_name": "Nome completo",
+  "name": "Nome",
   "mail_address": "Endereço de e-mail",
-  "message": "Mensagem",
+  "message": "Fique a vontade para me enviar uma mensagem 🙂",
   "sent": "Enviado!",
   "message_sent": "Sua mensagem foi enviada ao meu e-mail com sucesso.",
   "close": "Fechar",
