Adding first project

--- a/src/i18n/pt-br.json
+++ b/src/i18n/pt-br.json
@@ -9,7 +9,7 @@
   "about_me": "Sobre mim",
   "little_about_me": "Um pouco sobre mim:",
   "about_me_text": "Vitor Comin, 22 anos, é apaixonado por tecnologia e encontra nela um universo de possibilidades que o inspira a sonhar e crescer. Com dedicação e motivação, busca se desenvolver continuamente, encarando cada desafio como uma oportunidade para avançar ainda mais. Seu amor pelo que faz e o desejo constante de evolução são as forças que impulsionam sua entrega e sua dedicação todos os dias.",
-  "education": "Bacharel em Sistemas de Informação, UNIVILLE (8º semestre de 9).",
+  "education": "Bacharel em Sistemas de Informação, UNIVILLE (9º semestre de 9).",
   "work": "Atua como Desenvolvedor Full-Stack há mais de 1 ano na",
   "location": "Joinville, Santa Catarina. Brasil.",
   "my_skills": "Minhas habilidades",
@@ -23,5 +23,8 @@
   "send": "Enviar",
   "preview": "Prévia",
   "code": "Código",
-  "portfolio_image": "Portfólio de Vitor Comin"
+  "portfolio_image": "Portfólio de Vitor Comin",
+  "weather_radar_title": "Weather Radar",
+  "weather_radar_project": "Projeto Weather Radar",
+  "weather_radar_description": "Projeto pessoal básico de Front-End consumindo API pública OpenWeatherAPI, com responsividade, transições CSS, testes automatizados, arquitetura de código e mais."
 }
