--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -26,5 +26,7 @@
   "portfolio_image": "Vitor Comin portfolio",
   "weather_radar_title": "Weather Radar",
   "weather_radar_project": "Weather Radar Project",
-  "weather_radar_description": "Basic Front-End personal project consuming the OpenWeatherAPI public API, with responsiveness, CSS transitions, automated tests, code architecture, and more."
+  "weather_radar_description": "Basic Front-End personal project consuming the OpenWeatherAPI public API, with responsiveness, CSS transitions, automated tests, code architecture, and more.",
+  "cimefer_group_site": "Cimefer Group Business Website",
+  "cimefer_group_description": "Professional and responsive landing page for Cimefer Group, developed in WordPress."
 }
