--- a/src/i18n/pt-br.json
+++ b/src/i18n/pt-br.json
@@ -24,9 +24,11 @@
   "preview": "Prévia",
   "code": "Código",
   "portfolio_image": "Portfólio de Vitor Comin",
-  "weather_radar_title": "Weather Radar",
+  "weather_radar_title": "Projeto de Monitoramento Climático",
   "weather_radar_project": "Projeto Weather Radar",
   "weather_radar_description": "Projeto pessoal básico de Front-End consumindo API pública OpenWeatherAPI, com responsividade, transições CSS, testes automatizados, arquitetura de código e mais.",
   "cimefer_group_site": "Site Empresarial Cimefer Group",
-  "cimefer_group_description": "Landing page profissional e responsiva para a Cimefer Group, desenvolvida em WordPress."
+  "cimefer_group_description": "Landing page profissional e responsiva para a Cimefer Group, desenvolvida em WordPress.",
+  "simple_kanban_project": "Projeto Kanban Simples em React",
+  "simple_kanban_description": "Projeto pessoal de Front-End de um kanban simples para gerenciamento de tarefas, utilizando a biblioteca react-dnd-kit para arrastar e soltar."
 }
