--- a/src/i18n/pt-br.json
+++ b/src/i18n/pt-br.json
@@ -30,5 +30,5 @@
   "cimefer_group_site": "Site Empresarial Cimefer Group",
   "cimefer_group_description": "Landing page profissional e responsiva para a Cimefer Group, desenvolvida em WordPress.",
   "simple_kanban_project": "Projeto Kanban Simples em React",
-  "simple_kanban_description": "Projeto pessoal de Front-End de um kanban simples para gerenciamento de tarefas, utilizando a biblioteca react-dnd-kit para arrastar e soltar."
+  "simple_kanban_description": "Projeto pessoal de Front-End de um kanban simples para gerenciamento de tarefas, utilizando a biblioteca react-dnd-kit para arrastar e soltar. Projeto focado em desktop por ser especialidade da biblioteca."
 }
