Adjusting from Full-Stack to Front-End

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,7 +5,7 @@
   "contact": "Contact",
   "hello": "Hello there!",
   "my_name": "My name is Vitor Comin",
-  "developer": "Full-Stack Developer",
+  "developer": "Front-End Developer",
   "about_me": "About me",
   "little_about_me": "A little about me:",
   "about_me_text": "Vitor Comin, 22 years old, is passionate about technology and finds in it a universe of possibilities that inspires him to dream and grow. With dedication and motivation, he strives to continuously develop himself, viewing each challenge as an opportunity to move forward even more. His love for what he does and his constant desire for growth are the driving forces behind his commitment and dedication every day.",
