--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -29,5 +29,7 @@
   "cimefer_group_site": "Cimefer Group Business Website",
   "cimefer_group_description": "Professional and responsive landing page for Cimefer Group, developed in WordPress.",
   "simple_kanban_project": "Simple React Kanban Project",
-  "simple_kanban_description": "Personal Front-End project of a simple Kanban for task management, using the react-dnd-kit library for drag and drop. Project focused on desktop because it is the library's specialty."
+  "simple_kanban_description": "Personal Front-End project of a simple Kanban for task management, using the react-dnd-kit library for drag and drop. Project focused on desktop because it is the library's specialty.",
+  "wms_portal_title": "WMS Portal in Angular",
+  "wms_portal_description": "Front-End project of a WMS platform using the Angular framework with the PO UI component library. Also using a Mock API (mockapi.io) to perform CRUD operations."
 }
