adjusting home title

--- a/src/i18n/pt-br.json
+++ b/src/i18n/pt-br.json
@@ -5,7 +5,7 @@
   "contact": "Contato",
   "hello": "Olá visitante!",
   "my_name": "Meu nome é Vitor Comin",
-  "developer": "Desenvolvedor Front-End",
+  "developer": "Desenvolvedor Full-Stack",
   "about_me": "Sobre mim",
   "little_about_me": "Um pouco sobre mim:",
   "about_me_text": "Vitor Comin, 22 anos, é apaixonado por tecnologia e encontra nela um universo de possibilidades que o inspira a sonhar e crescer. Com dedicação e motivação, busca se desenvolver continuamente, encarando cada desafio como uma oportunidade para avançar ainda mais. Seu amor pelo que faz e o desejo constante de evolução são as forças que impulsionam sua entrega e sua dedicação todos os dias.",
